--- a/SuperFanPage.html
+++ b/SuperFanPage.html
@@ -1,26 +1,23 @@
 <!doctype html>
 <html>
-<head>
-<title>fanpage</title>
-<style type="text/css">
-body {
-    background-color: #313131;
+<head> 
+		<title>fanpage</title>
+		<style type="text/css">
+			body{
     color: #313131;
-    font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
+    font-family: "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif" sans-serif;
     font-size: 25px;
-    background-image: -webkit-linear-gradient(270deg,rgba(29,29,29,1.00) 16.11%,rgba(59,59,59,1.00) 52.73%,rgba(29,29,29,1.00) 93.73%), url(Green%20turf.jpg);
-    background-image: -moz-linear-gradient(270deg,rgba(29,29,29,1.00) 16.11%,rgba(59,59,59,1.00) 52.73%,rgba(29,29,29,1.00) 93.73%), url(Green%20turf.jpg);
-    background-image: -o-linear-gradient(270deg,rgba(29,29,29,1.00) 16.11%,rgba(59,59,59,1.00) 52.73%,rgba(29,29,29,1.00) 93.73%), url(Green%20turf.jpg);
-    background-image: linear-gradient(180deg,rgba(29,29,29,1.00) 16.11%,rgba(59,59,59,1.00) 52.73%,rgba(29,29,29,1.00) 93.73%), url(Green%20turf.jpg);
     position: absolute;
+    background-image: url(Super%20fan%20page/Green%20turf.jpg);
 }
 h1 {
     color: #009CD4;
-    font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", sans-serif;
+    font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", "sans-serif"
     font-style: italic;
     font-variant: normal;
     text-shadow: 4px 4px 4px #000000;
     border: thin none #000000;
+    font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", sans-serif;
 }
 p, ol, ul , td{
     background-color: #D0D0CE;
@@ -52,7 +49,7 @@ a {
     color: #45423F;
     text-decoration: none;
 }
-</style>
+        </style>
 </head>
 
 <body>
@@ -64,7 +61,7 @@ a {
 <p>Madden NFL (known as John Madden Football until 1993) is an American football sports video game series developed by EA Orlando for EA Sports. The franchise, named after Pro Football Hall of Fame coach and commentator John Madden, has sold more than 130 million copies as of 2018.[1] From 2004 until 2022, it was the only officially licensed National Football League (NFL) video game series, and has influenced many players and coaches of the physical sport. Among the series' features are detailed playbooks and player statistics and voice commentary in the style of a real NFL television broadcast. As of 2013 the franchise has generated over $4 billion in sales, making it one of the most profitable video game franchises on the market. Electronic Arts (EA) founder Trip Hawkins conceived the series and approached Madden in 1984 for his endorsement and expertise. Because of Madden's insistence that the game be as realistic as possible, the first version of John Madden Football did not appear until 1988. EA has released annual versions since 1990, and the series' name changed to Madden NFL in 1993 after EA acquired the rights to use NFL teams and players. Although Madden died in 2021, the game continues to bear his name as a result of a 2005 agreement which gives EA the right to use his name and likeness in perpetuity. Madden's estate continues to receive royalties pursuant to this agreement. (wikipedia)</p>
 <p>In my spare time I like to ply Madden on my xbox. I play it all the time&nbsp; and im pretty good at it. I first started playing madden around 5 years ago and ever sense I've loved the game. I mainly play&nbsp; with my friends but sometimes I&nbsp; play online against randoms. There are a few different game modes on madden but my favorite to play is Head 2 Head.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
 	
-	<h1><img src="Madden Cover Cameron Newton.png" width="600" height="643" alt=""/>- Madden NFL cover</h1>
+	<h1><img src="Super fan page/Madden Cover Cameron Newton.png" width="600" height="643" alt=""/>- Madden NFL cover</h1>
 	
 <h1>Favorite John Madden Quote&nbsp;</h1>
 <blockquote>
@@ -120,17 +117,17 @@ a {
         <tr>
           <th width="50%">Hard Rock Stadium</th>
           <td width="50%"><a href="https://en.wikipedia.org/wiki/Hard_Rock_Stadium">Miami Dolphins</a></td>
-          <td width="50%">&nbsp;<img src="Dolphins Stadium.png" width="250" height="138" alt=""/></td>
+          <td width="50%">&nbsp;<img src="Super fan page/Dolphins Stadium.png" width="250" height="138" alt=""/></td>
         </tr>
         <tr>
           <th width="50%">Lumen Field</th>
 <td width="50%"><a href="https://en.wikipedia.org/wiki/Lumen_Field">Seattle Seahawks</a><a href="http://127.0.0.1:63913/preview/app/index.html"></a></td>
-          <td width="50%"><img src="Seattle Seahawks.jpg" width="256" height="144" alt=""/></td>
+          <td width="50%"><img src="Super fan page/Seattle Seahawks.jpg" width="250" height="144" alt=""/></td>
         </tr>
         <tr>
           <th width="50%">Bank of America Stadium</th>
           <td width="50%"><a href="https://en.wikipedia.org/wiki/Bank_of_America_Stadium">Carolina Panthers</a><a href="http://127.0.0.1:63913/preview/app/index.html"></a></td>
-          <td width="50%"><img src="Carolina Panthers Stadium.jpg" width="250" height="167" alt=""/></td>
+          <td width="50%"><img src="Super fan page/Carolina Panthers Stadium.jpg" width="250" height="167" alt=""/></td>
         </tr>
         <tr>
           <th width="50%">Sofi Stadium&nbsp;</th>
